// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBoxPicture render with big bottom margin 1`] = `
<div
  className="mfui-beta-text-box-picture mfui-beta-text-box-picture_margin_big-bottom"
>
  <img
    alt="text-box"
    className="mfui-beta-text-box-picture__img"
    src="#"
  />
</div>
`;

exports[`TextBoxPicture render with big top margin 1`] = `
<div
  className="mfui-beta-text-box-picture mfui-beta-text-box-picture_margin_big-top"
>
  <img
    alt="text-box"
    className="mfui-beta-text-box-picture__img"
    src="#"
  />
</div>
`;

exports[`TextBoxPicture render with big vertical margins 1`] = `
<div
  className="mfui-beta-text-box-picture mfui-beta-text-box-picture_margin_big-vertical"
>
  <img
    alt="text-box"
    className="mfui-beta-text-box-picture__img"
    src="#"
  />
</div>
`;

exports[`TextBoxPicture render with default props 1`] = `
<div
  className="mfui-beta-text-box-picture mfui-beta-text-box-picture_margin_default"
>
  <img
    alt="text-box"
    className="mfui-beta-text-box-picture__img"
    src="#"
  />
</div>
`;
